[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/player/player.glb" type="PackedScene" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://scenes/effects/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/ammo-reloadboop.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/ammo-beginreload.wav" type="AudioStream" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.906798, 0.0775551, 0.725836 )

[node name="Player" type="Area" groups=[
"players",
]]
script = ExtResource( 3 )

[node name="PlayerModel" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Explosion" parent="." instance=ExtResource( 4 )]
visible = false

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ReloadBoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="ReloadStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[connection signal="area_entered" from="." to="." method="on_collision"]
[connection signal="exploded" from="Explosion" to="." method="cleanup_player"]
[connection signal="timeout" from="ReloadTimer" to="." method="reload"]
[connection signal="timeout" from="RegenTimer" to="." method="heal"]
[connection signal="finished" from="ReloadBoop" to="ReloadBoop" method="play_loop"]
